Centralize access-aware tool invocation